# ChangeLog for media-plugins/gst-plugins-theora
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.64 2006/09/19 19:46:05 agriffis Exp $

  19 Sep 2006; Aron Griffis <agriffis@gentoo.org>
  gst-plugins-theora-0.10.8.ebuild:
  Mark 0.10.8 stable on ia64

  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
  gst-plugins-theora-0.10.9.ebuild:
  Add ~ia64 keyword.

*gst-plugins-theora-0.10.9 (15 Jul 2006)

  15 Jul 2006; <zaheerm@gentoo.org> +gst-plugins-theora-0.10.9.ebuild:
  version bump

*gst-plugins-theora-0.10.8 (12 Jun 2006)

  12 Jun 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gst-plugins-theora-0.10.8.ebuild:
  version bump

  29 May 2006; Guy Martin <gmsoft@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  Stable on hppa.

  20 May 2006; Thomas Cort <tcort@gentoo.org>
  gst-plugins-theora-0.10.7.ebuild:
  Added ~alpha keyword.

  14 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gst-plugins-theora-0.10.6.ebuild:
  Added ~hppa

  05 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  ppc stable, bug #128737

  03 May 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  Stable on sparc wrt #128737

*gst-plugins-theora-0.10.6 (02 May 2006)

  02 May 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
  -gst-plugins-theora-0.10.0.ebuild, -gst-plugins-theora-0.10.1.ebuild,
  -gst-plugins-theora-0.10.2.ebuild, -gst-plugins-theora-0.10.3.ebuild,
  +gst-plugins-theora-0.10.6.ebuild:
  version bump

  23 Apr 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  stable on x86 (bug #128737)

  17 Apr 2006; Markus Rothe <corsair@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  Stable on ppc64; bug #128737

  08 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gst-plugins-theora-0.10.4.ebuild:
  Added to ~ppc
