@@ -3,11 +3,16 @@ DIST gst-plugins-0.8.11.tar.bz2 2439654 RMD160 833aec123a52cd0f36ec883c349cc8d69
 DIST gst-plugins-0.8.12.tar.bz2 2506926 RMD160 cc0bbf3d790cb5791ce982fe6493bf2d8496a507 SHA1 3b65fe96aa849c463f5f968830ad76143c4b9952 SHA256 8728da4f71bc87e10fb064d28154220d66a3d8332482fd2c8a7ed47c5f0a03ba
 DIST gst-plugins-0.8.8.tar.bz2 2214274 RMD160 e141c576b668109d41f32541a96da5c79016e55c SHA1 5ba9908c3a09c1b7554ed0194a85ba63c2cc1ced SHA256 5ac9540297fe94f07bb24e2a26290ecf04385adee4419af631ac694295ee9717
 DIST gst-plugins-0.8.9.tar.bz2 2356958 RMD160 294b1873c8d54ac225bf94a2e5ba872f089fd605 SHA1 f73dd3b96e1e5c7e90fdb1bf2c72de8c8d035bb1 SHA256 713e971762fe8b8ee3f2b097693a6b7bc6b85ef2167223b7e21cbeaa8c66035c
+DIST gst-plugins-base-0.10.10.tar.bz2 1333651 RMD160 11b7f441d6499a3e462fc4a0ebc9dd026925e0ee SHA1 516daec5a6f5d1e8c6fd74e2170fc7a12305a0c1 SHA256 2246a5921ad060e86acd81cabec17a5022d1997849f950ac2c8f6f14f9291d3e
 DIST gst-plugins-base-0.10.4.tar.bz2 1097817 RMD160 da837968b10a130dbeaa1953a3ad9f27586ba683 SHA1 1874bfc701f75ff859615c6b6e5b65c50df6f53a SHA256 6c556051191364eacf05dcf01a9f3101240a6b6155e331e4cbcbfca55a91ca42
 DIST gst-plugins-base-0.10.6.tar.bz2 1195072 RMD160 69659a40113b38b7eb1569c1da49ee5c37a5fd24 SHA1 58c1177e530d2ff91ddfa3a9322ab5ba3e0ddbb4 SHA256 0ef1b8cbe6d7e898d0636342479de46a780f720033c1b4f7217c903aac6d80ad
 DIST gst-plugins-base-0.10.7.tar.bz2 1166071 RMD160 67957a8d62fcf2b3170c57ea8bc4b58ce227306b SHA1 832b54fc9f3bc7f4c0a5337363081a25171d2662 SHA256 7be5984162333dae48d8f7e58e6c7f4b43726c78e2ca13aca6618b1342af8d37
 DIST gst-plugins-base-0.10.8.tar.bz2 1234234 RMD160 41f5647fb0be2d0038ca925a0479e5c8ac57ab4a SHA1 b428fe9caa17edd78a87d50931691a6d47c20e72 SHA256 4e7c14f82b23f268ac053ad21a23cc637052eca72b8ea23d02c2e7a90521d74a
 DIST gst-plugins-base-0.10.9.tar.bz2 1261167 RMD160 041f4088034ae8def66fade252ef3d21c4d10b7a SHA1 b13ae60ce7f58b902c91f3c56851a69e29d5d350 SHA256 81906ea7471212bc376d509a843f113913618c2c93e352a0b5d890f69e1d35f7
+EBUILD gst-plugins-theora-0.10.10.ebuild 477 RMD160 a41fb762c27edfe18a78a0ea377046c547d7f167 SHA1 ee0feb720e838d2d00071890c0b55f1557ffe2d0 SHA256 94732fe4ea287b480964855fdca0fbed2e3b9b5e4a6e2ce4459da10187104b31
+MD5 7e2041e5b1b653c6925098ec4617cc1e gst-plugins-theora-0.10.10.ebuild 477
+RMD160 a41fb762c27edfe18a78a0ea377046c547d7f167 gst-plugins-theora-0.10.10.ebuild 477
+SHA256 94732fe4ea287b480964855fdca0fbed2e3b9b5e4a6e2ce4459da10187104b31 gst-plugins-theora-0.10.10.ebuild 477
 EBUILD gst-plugins-theora-0.10.4.ebuild 455 RMD160 fb7e9f7980cd062196774d27e7fbd66b76e61e35 SHA1 faba9aaef2a865edabcf17a72122d0a083477058 SHA256 ded689103ab0b4787cec35673fbae4730356b3d9016a7470546b6571d0ad4833
 MD5 8a22bf9bdb407d98c66f7f177ee2b26b gst-plugins-theora-0.10.4.ebuild 455
 RMD160 fb7e9f7980cd062196774d27e7fbd66b76e61e35 gst-plugins-theora-0.10.4.ebuild 455
@@ -48,14 +53,17 @@ EBUILD gst-plugins-theora-0.8.9.ebuild 375 RMD160 fb3582496b1c35cbe41945cea6524b
 MD5 9f03e9d2204ce08b8f67bdb8f6277e76 gst-plugins-theora-0.8.9.ebuild 375
 RMD160 fb3582496b1c35cbe41945cea6524be0613fd38c gst-plugins-theora-0.8.9.ebuild 375
 SHA256 c98f3c51ada9aa81803c45da4adfce4a247a32894c6354b16bf2599e897daa13 gst-plugins-theora-0.8.9.ebuild 375
-MISC ChangeLog 8202 RMD160 33c7dc83095e705483a39223d2f741127a9381fd SHA1 513c2b4feeae256695c4379ed3015c121f1671af SHA256 62e002518deed4f5db00773d8580f73d33143c9a19980181f45afb814f80c54d
-MD5 578edf49e744231971df51317e743f42 ChangeLog 8202
-RMD160 33c7dc83095e705483a39223d2f741127a9381fd ChangeLog 8202
-SHA256 62e002518deed4f5db00773d8580f73d33143c9a19980181f45afb814f80c54d ChangeLog 8202
+MISC ChangeLog 8354 RMD160 ce74d70da7c30298306d3b11af95ae499e125c32 SHA1 b9596df04484422c47d1d3d2e72d04a1cb741686 SHA256 77030d36ec09be51ab28bd4592b4db336140c5cf0618bee0bf9984f0decaf231
+MD5 844369ee23029a61894be92e7c3e0baa ChangeLog 8354
+RMD160 ce74d70da7c30298306d3b11af95ae499e125c32 ChangeLog 8354
+SHA256 77030d36ec09be51ab28bd4592b4db336140c5cf0618bee0bf9984f0decaf231 ChangeLog 8354
 MISC metadata.xml 181 RMD160 51814fbdcf7f32cfe70018b3af7fc798e41ff90d SHA1 faf40c45bd66b0072b95556cf7ab097d3be19511 SHA256 22c215902ccdc7fd8cdb765750fb23ea9d9b6c9d3edb1b45325c3469f8f6ffc5
 MD5 6cf6f97e79b43eaf70fa938c431342a3 metadata.xml 181
 RMD160 51814fbdcf7f32cfe70018b3af7fc798e41ff90d metadata.xml 181
 SHA256 22c215902ccdc7fd8cdb765750fb23ea9d9b6c9d3edb1b45325c3469f8f6ffc5 metadata.xml 181
+MD5 1ed05134f1cc0bac99259d21ba78efe1 files/digest-gst-plugins-theora-0.10.10 280
+RMD160 33547be5346dc37dfa0ffa7c3e61dcf5be754516 files/digest-gst-plugins-theora-0.10.10 280
+SHA256 a138219ddbf7c54e2a8f45fb3e5b693440948c8bb27158e361963ee538117046 files/digest-gst-plugins-theora-0.10.10 280
 MD5 3477ec0d04649ccfcc545e28e0911bd3 files/digest-gst-plugins-theora-0.10.4 277
 RMD160 bee1889727ca635912779fbcac2958f0ceba48b0 files/digest-gst-plugins-theora-0.10.4 277
 SHA256 f47f4fd7829d14012ef690db4a45f568549f7a5015a00bd9ba03a41f3584e654 files/digest-gst-plugins-theora-0.10.4 277
