@@ -1,0 +1,3 @@
+MD5 7a51a3fabebe5f77235926ad65ba9593 gst-plugins-base-0.10.10.tar.bz2 1333651
+RMD160 11b7f441d6499a3e462fc4a0ebc9dd026925e0ee gst-plugins-base-0.10.10.tar.bz2 1333651
+SHA256 2246a5921ad060e86acd81cabec17a5022d1997849f950ac2c8f6f14f9291d3e gst-plugins-base-0.10.10.tar.bz2 1333651
