@@ -1,0 +1,13 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/Attic/gst-plugins-theora-0.10.10.ebuild,v 1.1 2006/09/21 13:28:07 zaheerm Exp $
+
+inherit gst-plugins-base
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+RDEPEND=">=media-libs/libtheora-1.0_alpha3
+	>=media-libs/libogg-1
+	>=media-libs/gst-plugins-base-0.10.10"
+DEPEND="${RDEPEND}"
