@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/gst-plugins-theora
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.64 2006/09/19 19:46:05 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.65 2006/09/21 13:28:07 zaheerm Exp $
+
+*gst-plugins-theora-0.10.10 (21 Sep 2006)
+
+  21 Sep 2006; Zaheer Abbas Merali <zaheerm@gentoo.org>
+  +gst-plugins-theora-0.10.10.ebuild:
+  version bump
 
   19 Sep 2006; Aron Griffis <agriffis@gentoo.org>
   gst-plugins-theora-0.10.8.ebuild:
